@@ -1,5 +1,6 @@
 In development:
 	+ Error message if extension can't add a new account
+	+ Open the new not focused tab with middle button mouse click
 
 0.13:
 	+ Reply to all with ctrl+click on reply button
